# exotic-compress

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: methods.md  research-log.md  summary.md
exotic_compress/: __init__.py  baseline.py  bench.py  compress_activation.py  compress_monarch.py  compress_svd.py  compress_tt.py  cross_layer.py  log_domain.py  tropical.py  verify.py
tests/: test_factorize.py
