[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "exotic-compress"
version = "0.1.0"
description = "Lossless neural network compression using exotic math"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "transformers>=4.35",
    "numpy>=1.24",
    "tensorly>=0.8",
    "matplotlib>=3.7",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ipython",
    "jupyter",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["exotic_compress*"]
